--- a/programacion/02Estructuras_de_control/05Ejercicios_while.ipynb
+++ b/programacion/02Estructuras_de_control/05Ejercicios_while.ipynb
@@ -248,14 +248,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dia = int(input(\"Introduzca su día de nacimiento: \"))\n",
+    "mes = int(input(\"Introduzca su mes de nacimiento: \"))\n",
+    "año = int(input(\"Introduzca su año de nacimiento: \"))\n",
+    "suma = dia + mes + año\n",
+    "numsuerte = 0\n",
+    "valor = \"\"\n",
+    "while valor == \"\":\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 9 9 9 9\n"
+      "Tu número de la suerte es 28\n"
      ]
     }
    ],
@@ -265,12 +281,9 @@
     "año = int(input(\"Introduzca su año de nacimiento: \"))\n",
     "suma = dia + mes + año\n",
     "numsuerte = 0\n",
-    "suma2 = str(suma)\n",
-    "for digito in suma2:\n",
-    "    print(digito, end=\" \")\n",
-    "numsuerte += int(digito)\n",
-    "print(numsuerte)\n",
-    "#print(\"Tu número de la suerte es\", numsuerte)\n",
+    "for digito in str(suma):\n",
+    "    numsuerte += int(digito)\n",
+    "print(\"Tu número de la suerte es\", numsuerte)\n",
     "\n",
     "# Si usamos for() con range() imprime los valores dentro del range, se utiliza para trabajar con números.\n",
     "# Si usamos for() con in palabra (un valor con cadena) imprime los caracteres de la cadena 1x1, utilizado para cadenas.\n",
