--- a/programacion/02Estructuras_de_control/04Estructuras_repetitivas.ipynb
+++ b/programacion/02Estructuras_de_control/04Estructuras_repetitivas.ipynb
@@ -299,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Utilizar for() para ir hacia atrás\n",
+    "### Utilizar for para ir hacia atrás\n",
     "Ejemplo desde el 10 hasta el 1:"
    ]
   },
@@ -706,6 +706,47 @@
     "    for letra in \"ABCD\":\n",
     "        print(piso, letra, sep = \"º\", end=\" \")\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conversión de for a while\n",
+    "### Pregunta de examen\n",
+    "En Python siempre es posible convertir un bucle for en un bucle while. Cuando se trata de bucles for que recorren series numéricas se haría así:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "i = <valor_inicial>\n",
+    "while i < <valor_final>:\n",
+    "    #Instrucciones del bucle\n",
+    "    #Incremento o decremento de la variable i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 0\n",
+    "while num < 10:\n",
+    "    print(num, end =\" \")\n",
+    "    num += 1"
    ]
   }
  ],
