--- a/programacion/02Estructuras_de_control/06Ejercicios_for.ipynb
+++ b/programacion/02Estructuras_de_control/06Ejercicios_for.ipynb
@@ -315,24 +315,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hoal"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-59b74e6cba66>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-59b74e6cba66>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    match letra:\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "frase = input(\"Introduzca una frase a continuación: \")\n",
-    "#frase = frase.upper\n",
+    "frase = frase.upper()\n",
     "for letra in frase:\n",
-    "    \n",
-    "    print(letra, end=\"\")\n",
+    "    match letra:\n",
+    "        case \"a\" | \"e\" | \"i\" | \"o\" | \"u\":\n",
+    "            print()\n",
+    "        case _:\n",
+    "            print(letra, end=\"\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-05fb36ae1eed>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-05fb36ae1eed>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    match frase:\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Introduzca una frase a continuación: \")\n",
+    "frase = frase.upper()\n",
+    "#for letra in frase:\n",
+    "match frase:\n",
+    "    case \"a\" | \"e\" | \"i\" | \"o\" | \"u\":\n",
+    "        print()\n",
+    "    case _:\n",
+    "        print(\"letra\", end=\"\")\n",
+    "\n",
+    "serie = input(\"¿Cuál es tu serie favorita? \")\n",
+    "serie = serie.lower()\n",
+    "match serie:"
    ]
   },
   {
@@ -372,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
