--- a/programacion/07Ejercicios_repetitivas.ipynb
+++ b/programacion/07Ejercicios_repetitivas.ipynb
@@ -248,32 +248,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cantidad = int(input(\"Introduzca la cantidad de bloques que tienen: \"))\n",
-    "for i in range(cantidad):\n",
-    "    #op"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "La altura de la pirámide es 6 \n",
+      "bloques que tiene:  21\n"
      ]
     }
    ],
    "source": [
-    "altura = capas_completas\n",
-    "op1 = 6\n",
-    "print(op)"
+    "cantidad = int(input(\"Introduzca la cantidad de bloques que tienen: \"))\n",
+    "construccion = 0\n",
+    "altura = 0\n",
+    "suma = 0\n",
+    "valor = \"\"\n",
+    "while valor == \"\": #cambiar esto\n",
+    "    if suma >= cantidad:\n",
+    "        break\n",
+    "    construccion += 1\n",
+    "    suma += construccion\n",
+    "    altura += 1\n",
+    "print(\"La altura de la pirámide es\", altura, end=\" \")\n",
+    "print(\"\\nbloques que tiene: \", suma)"
    ]
   },
   {
