--- a/programacion/07Ejercicios_repetitivas.ipynb
+++ b/programacion/07Ejercicios_repetitivas.ipynb
@@ -101,35 +101,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cont_edad = 0\n",
-    "cont_altura = 0\n",
-    "cont_mas18 = 0\n",
-    "cont_mas175 = 0\n",
-    "for i in range(5):\n",
-    "    edad = int(input(\"Indique su edad\"))\n",
-    "    altura = float(input(\"Indique su altura\"))\n",
-    "    if edad > 0 and altura > 0:\n",
-    "        cont_altura += altura\n",
-    "        cont_edad += edad\n",
-    "        if edad >= 18:\n",
-    "            cont_mas18 += 1\n",
-    "        if altura >= 1.75:\n",
-    "            cont_mas175 += 1\n",
-    "    else:\n",
-    "        print(\"Ha introducido algún parámetro incorrecto, por favor inténtelo de nuevo\")\n",
-    "print(\"La edad media es de\", cont_edad / 5, \"y la altura media es de\", cont_altura / 5, end=\" \")\n",
-    "print(\"\\nAdemás, hay\", cont_mas18, \"alumnos mayores de edad y\", cont_mas175, \"alumnos que miden más de 1.75\", end=\" \")\n",
-    "\n",
-    "# PREGUNTAR\n",
-    "# preguntaer si es mejor crear una variable para la media o calcularla directamente en el print"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,10 +137,7 @@
     "    if pregunta != \"s\" and pregunta != \"n\":\n",
     "        print(\"Por favor introduce un parámetro válido (s/n)\")\n",
     "        pregunta = input(\"¿Quiere seguir introduciendo alturas? (s/n) \")\n",
-    "print(\"El promedio de la altura de todos los niños es\", round(cont_altura / cont_media, 2))\n",
-    "\n",
-    "# PREGUNTAR\n",
-    "# preguntaer si se puede optimizar más este código"
+    "print(\"El promedio de la altura de todos los niños es\", round(cont_altura / cont_media, 2))"
    ]
   },
   {
@@ -248,15 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La altura de la pirámide es 6 \n",
-      "bloques que tiene:  21\n"
+      "La altura de la pirámide es 44 "
      ]
     }
    ],
@@ -265,15 +232,12 @@
     "construccion = 0\n",
     "altura = 0\n",
     "suma = 0\n",
-    "valor = \"\"\n",
-    "while valor == \"\": #cambiar esto\n",
-    "    if suma >= cantidad:\n",
-    "        break\n",
+    "while suma < cantidad:\n",
     "    construccion += 1\n",
     "    suma += construccion\n",
-    "    altura += 1\n",
-    "print(\"La altura de la pirámide es\", altura, end=\" \")\n",
-    "print(\"\\nbloques que tiene: \", suma)"
+    "    if suma <= cantidad:\n",
+    "        altura += 1\n",
+    "    print(\"La altura de la pirámide es\", altura, end=\" \")"
    ]
   },
   {
@@ -291,12 +255,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Introduzca un número para calcular su factorial: \"))\n",
+    "res = 1\n",
+    "for i in range(num, 0, -1):\n",
+    "    res *= i\n",
+    "print(res)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Ejercicio 7\n",
     "\n",
     "Crea un programa en Python que pida 6 notas y que escriba la cantidad de alumnos aprobados, condicionados (nota entre 4 y 5) y suspensos.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hay 2 alumno/s suspenso/s, 1 alumno/s condicionado/s y 2 alumno/s aprobado/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "suspenso = 0\n",
+    "condicionado = 0\n",
+    "aprobado = 0\n",
+    "for i in range(5):\n",
+    "    nota = float(input(\"Introduzca la nota: \"))\n",
+    "    if nota > 0 and nota < 4:\n",
+    "        suspenso += 1\n",
+    "    if nota >= 4 and nota <= 5:\n",
+    "        condicionado += 1\n",
+    "    if nota > 6 and nota < 10:\n",
+    "        aprobado += 1\n",
+    "    #else:\n",
+    "    #     print(\"Ha introducido una cifra inválida, por favor inténtelo de nuevo\")\n",
+    "print(\"Hay\", suspenso, \"alumno/s suspenso/s,\", condicionado, \"alumno/s condicionado/s y\", aprobado, \"alumno/s aprobado/s\")"
    ]
   },
   {
@@ -307,6 +322,21 @@
     "## Ejercicio 8\n",
     "\n",
     "Crea un programa en Python que pida 10 números y muestre al final si se ha introducido algún negativo.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contador = 0\n",
+    "for i in range(9):\n",
+    "    num = float(input(\"Introduzca un número: \"))\n",
+    "    if num < 0:\n",
+    "        contador + 1\n",
+    "if contador >= 1:\n",
+    "    print(\"Sí, has introducido\", contador, \"números negativos\")"
    ]
   },
   {
