--- a/programacion/05Ejercicios_while.ipynb
+++ b/programacion/05Ejercicios_while.ipynb
@@ -315,18 +315,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tu número de la suerte es:  28\n"
+     ]
+    }
+   ],
    "source": [
     "dia = int(input(\"Introduzca su día de nacimiento: \"))\n",
     "mes = int(input(\"Introduzca su mes de nacimiento: \"))\n",
     "año = int(input(\"Introduzca su año de nacimiento: \"))\n",
+    "\n",
+    "suma = dia + mes + año\n",
+    "# print(suma) #deberia ser 1999\n",
+    "cociente = suma // 10\n",
+    "numsuerte = suma % 10\n",
+    "#print(numsuerte) #deberia ser 9\n",
+    "\n",
+    "while cociente != 0:\n",
+    "    \n",
+    "    numsuerte += cociente % 10\n",
+    "    cociente = cociente // 10\n",
+    "    \n",
+    "print(\"Tu número de la suerte es: \", numsuerte)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "suma = dia + mes + año\n",
     "numsuerte = 0\n",
-    "valor = \"\"\n",
-    "while valor == \"\":\n",
-    "    "
+    "\n",
+    "while suma != 0:\n",
+    "    numsuerte += suma % 10\n",
+    "    suma = suma // 10\n",
+    "\n",
+    "print(\"Tu número de la suerte es \", numsuerte)"
    ]
   },
   {
