--- a/programacion/02Estructuras_de_control/03Ejercicios_estructuras_selectivas.ipynb
+++ b/programacion/02Estructuras_de_control/03Ejercicios_estructuras_selectivas.ipynb
@@ -643,10 +643,16 @@
     "dia = int(input(\"Indique el día\"))\n",
     "mes = int(input(\"Indique el mes\"))\n",
     "año = int(input(\"Indique el año\"))\n",
-    "print(dia + 1, mes, año, sep=\"/\")\n",
-    "#cadena dia(1-30), cuando llegue a 30 se reinicia y +1 mes\n",
-    "#mes(1-12), cuando llegue a 12 se reincia y +1 año\n",
-    "\n"
+    "if dia >= 1 and dia <= 30 and mes >= 1 and mes <= 12 and año > 0:\n",
+    "    dia += 1\n",
+    "    if dia > 30:\n",
+    "        mes += 1\n",
+    "        dia = 1\n",
+    "        if mes > 12:\n",
+    "            año += 1\n",
+    "            mes = 1\n",
+    "else:\n",
+    "    print(\"La fecha introducida no es correcta\")"
    ]
   },
   {
