--- a/programacion/02Estructuras_de_control/04Estructuras_repetitivas.ipynb
+++ b/programacion/02Estructuras_de_control/04Estructuras_repetitivas.ipynb
@@ -713,7 +713,13 @@
    "metadata": {},
    "source": [
     "# Conversión de for a while\n",
-    "### Pregunta de examen\n",
+    "`Pregunta de examen`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "En Python siempre es posible convertir un bucle for en un bucle while. Cuando se trata de bucles for que recorren series numéricas se haría así:"
    ]
   },
@@ -721,6 +727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```python\n",
     "i = <valor_inicial>\n",
     "while i < <valor_final>:\n",
     "    #Instrucciones del bucle\n",
