--- a/programacion/02Estructuras_de_control/05Ejercicios_while.ipynb
+++ b/programacion/02Estructuras_de_control/05Ejercicios_while.ipynb
@@ -126,7 +126,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "¿Quiere ver más múltiplos?\n",
+      "6\n",
+      "¿Quiere ver más múltiplos?\n",
+      "9\n",
+      "¿Quiere ver más múltiplos?\n",
+      "12\n",
+      "¿Quiere ver más múltiplos?\n",
+      "¡Hasta luego!\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Escribe un número para ver sus múltiplos: \"))\n",
+    "pregunta = \"s\"\n",
+    "multi = 0\n",
+    "while pregunta == \"s\":\n",
+    "    multi += 1\n",
+    "    res = num * multi\n",
+    "    print(res)\n",
+    "    pregunta = input(\"¿Quiere ver más múltiplos? (s/n): \")\n",
+    "    print(\"¿Quiere ver más múltiplos?\")\n",
+    "    if pregunta != \"s\" or pregunta == \"n\":\n",
+    "        print(\"¡Hasta luego!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hacer el mismo ejercicio con el bucle for:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -135,26 +177,51 @@
      "text": [
       "3\n",
       "6\n",
+      "9\n",
+      "12\n",
+      "15\n",
       "18\n",
-      "Ha introducido una respuesta no válida, por favor inténtelo de nuevo\n",
-      "¡Hasta luego!\n"
+      "21\n",
+      "24\n",
+      "27\n",
+      "30\n"
      ]
     }
    ],
    "source": [
-    "num = int(input(\"Escribe un número para ver sus múltiplos: \"))\n",
-    "pregunta = \"\"\n",
-    "multi = 0\n",
-    "while pregunta != \"n\":\n",
-    "    pregunta = input(\"¿Quiere ver más múltiplos? (s/n): \")\n",
-    "    if pregunta == \"s\":\n",
-    "        multi += 1\n",
-    "        num = num * multi\n",
-    "        print(num)\n",
-    "    elif pregunta == \"n\":\n",
-    "        print(\"¡Hasta luego!\")\n",
-    "    else:\n",
-    "        print(\"Ha introducido una respuesta no válida, por favor inténtelo de nuevo\")"
+    "num = int(input(\"Introduzca un número para ver sus múltiplos: \"))\n",
+    "num_multiplos = int(input(\"Introduzca el número de múltiplos que quiere ver: \"))\n",
+    "for i in range(1, num_multiplos+1):\n",
+    "    print(num * i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n",
+      "9\n",
+      "12\n",
+      "15\n",
+      "18\n",
+      "21\n",
+      "24\n",
+      "27\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Introduzca un número para ver sus múltiplos: \"))\n",
+    "num_multiplos = int(input(\"Introduzca el número de múltiplos que quiere ver: \"))\n",
+    "for multiplo in range(num, num * num_multiplos + 1, num):\n",
+    "    print(multiplo)"
    ]
   },
   {
@@ -248,18 +315,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tu número de la suerte es:  28\n"
+     ]
+    }
+   ],
    "source": [
     "dia = int(input(\"Introduzca su día de nacimiento: \"))\n",
     "mes = int(input(\"Introduzca su mes de nacimiento: \"))\n",
     "año = int(input(\"Introduzca su año de nacimiento: \"))\n",
+    "\n",
+    "suma = dia + mes + año\n",
+    "# print(suma) #deberia ser 1999\n",
+    "cociente = suma // 10\n",
+    "numsuerte = suma % 10\n",
+    "#print(numsuerte) #deberia ser 9\n",
+    "\n",
+    "while cociente != 0:\n",
+    "    \n",
+    "    numsuerte += cociente % 10\n",
+    "    cociente = cociente // 10\n",
+    "    \n",
+    "print(\"Tu número de la suerte es: \", numsuerte)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "suma = dia + mes + año\n",
     "numsuerte = 0\n",
-    "valor = \"\"\n",
-    "while valor == \"\":\n",
-    "    "
+    "\n",
+    "while suma != 0:\n",
+    "    numsuerte += suma % 10\n",
+    "    suma = suma // 10\n",
+    "\n",
+    "print(\"Tu número de la suerte es \", numsuerte)"
    ]
   },
   {
