--- a/programacion/02Estructuras_de_control/06Ejercicios_for.ipynb
+++ b/programacion/02Estructuras_de_control/06Ejercicios_for.ipynb
@@ -253,7 +253,7 @@
    ],
    "source": [
     "op = 1\n",
-    "for i in range(1, 21, 2):\n",
+    "for i in range(1, 20, 2):\n",
     "    op *= i\n",
     "print(op)"
    ]
@@ -315,15 +315,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-59b74e6cba66>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-59b74e6cba66>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    match letra:\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GM SPM"
      ]
     }
    ],
@@ -332,8 +331,8 @@
     "frase = frase.upper()\n",
     "for letra in frase:\n",
     "    match letra:\n",
-    "        case \"a\" | \"e\" | \"i\" | \"o\" | \"u\":\n",
-    "            print()\n",
+    "        case \"A\" | \"E\" | \"I\" | \"O\" | \"U\":\n",
+    "            print(end=\"\")\n",
     "        case _:\n",
     "            print(letra, end=\"\")\n",
     "    "
@@ -341,31 +340,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-05fb36ae1eed>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-05fb36ae1eed>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    match frase:\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BRYN S TNT"
      ]
     }
    ],
    "source": [
     "frase = input(\"Introduzca una frase a continuación: \")\n",
     "frase = frase.upper()\n",
-    "#for letra in frase:\n",
-    "match frase:\n",
-    "    case \"a\" | \"e\" | \"i\" | \"o\" | \"u\":\n",
-    "        print()\n",
-    "    case _:\n",
-    "        print(\"letra\", end=\"\")\n",
-    "\n",
-    "serie = input(\"¿Cuál es tu serie favorita? \")\n",
-    "serie = serie.lower()\n",
-    "match serie:"
+    "for letra in frase:\n",
+    "    if letra == \"A\" or letra == \"E\" or letra == \"I\" or letra == \"O\" or letra == \"U\":\n",
+    "        print(end=\"\")\n",
+    "    else:\n",
+    "        print(letra, end=\"\")"
    ]
   },
   {
@@ -378,6 +371,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tu frase tiene 4 vocales\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase = input(\"Introduzca una frase a continuación: \")\n",
+    "frase = frase.lower()\n",
+    "contador = 0\n",
+    "for letra in frase:\n",
+    "    match letra:\n",
+    "        case \"a\" | \"e\" | \"i\" | \"o\" | \"u\":\n",
+    "            contador += 1\n",
+    "        case _:\n",
+    "            print(end=\"\")\n",
+    "print(\"Tu frase tiene\", contador, \"vocales\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -386,6 +405,28 @@
     "El alumnado del IES de Teis tiene un correo electrónico en el dominio `iesteis.es`. Este correo consiste en el nombre de usuario con el que acceden en las aulas seguido de `@iesteis.es`. Por ejemplo `a23mariarm@iesteis.es`. \n",
     "\n",
     "Escribe un programa en Python que pida al usuario un correo electrónico y devuelva el nombre de usuario. En este ejemplo: `a23mariarm`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "marialorenzo"
+     ]
+    }
+   ],
+   "source": [
+    "correo = input(\"Introduzca su correo electrónico a continuación: \")\n",
+    "for letra in correo:\n",
+    "    if letra != \"@\":\n",
+    "        print(letra, end=\"\")\n",
+    "    else:\n",
+    "        break"
    ]
   }
  ],
@@ -405,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
