--- a/programacion/02Estructuras_de_control/07Ejercicios_repetitivas.ipynb
+++ b/programacion/02Estructuras_de_control/07Ejercicios_repetitivas.ipynb
@@ -20,6 +20,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "93\n",
+      "86\n",
+      "79\n",
+      "72\n",
+      "65\n",
+      "58\n",
+      "51\n",
+      "44\n",
+      "37\n",
+      "30\n",
+      "23\n",
+      "16\n",
+      "9\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(100, -1, -7):\n",
+    "    print(i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,6 +64,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La edad media es de 17.8 y la altura media es de 1.69 \n",
+      "Además, hay 3 alumnos mayores de edad y 2 alumnos que miden más de 1.75 "
+     ]
+    }
+   ],
+   "source": [
+    "cont_edad = 0\n",
+    "cont_altura = 0\n",
+    "cont_mas18 = 0\n",
+    "cont_mas175 = 0\n",
+    "for i in range(5):\n",
+    "    edad = int(input(\"Indique su edad\"))\n",
+    "    altura = float(input(\"Indique su altura\"))\n",
+    "    if edad > 0 and altura > 0:\n",
+    "        cont_altura += altura\n",
+    "        cont_edad += edad\n",
+    "        if edad >= 18:\n",
+    "            cont_mas18 += 1\n",
+    "        if altura >= 1.75:\n",
+    "            cont_mas175 += 1\n",
+    "    else:\n",
+    "        print(\"Ha introducido algún parámetro incorrecto, por favor inténtelo de nuevo\")\n",
+    "mediaedad = cont_edad / 5\n",
+    "mediaalt = cont_altura / 5\n",
+    "print(\"La edad media es de\", mediaedad, \"y la altura media es de\", mediaalt, end=\" \")\n",
+    "print(\"\\nAdemás, hay\", cont_mas18, \"alumnos mayores de edad y\", cont_mas175, \"alumnos que miden más de 1.75\", end=\" \")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,12 +110,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Por favor intri¡oduce un parámetro válido (s/n)\n",
+      "El promedio de la altura de todos los niños es 1.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "cont_altura = 0\n",
+    "cont_media = 0\n",
+    "cont_preg = 0\n",
+    "pregunta = \"s\"\n",
+    "while pregunta == \"s\":\n",
+    "    altura = float(input(\"Indique a continuación su altura: \"))\n",
+    "    cont_altura += altura\n",
+    "    cont_media += 1\n",
+    "    cont_preg += 1\n",
+    "    pregunta = input(\"¿Quiere seguir introduciendo alturas? (s/n) \")\n",
+    "    if pregunta != \"s\" and pregunta != \"n\":\n",
+    "        print(\"Por favor introduce un parámetro válido (s/n)\")\n",
+    "        pregunta = input(\"¿Quiere seguir introduciendo alturas? (s/n) \")\n",
+    "print(\"El promedio de la altura de todos los niños es\", round(cont_altura / cont_media, 2))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Ejercicio 4\n",
     "\n",
     "Crea un programa en Python que pida un número (que debe estar entre 0 y 10) y muestre la tabla de multiplicar de dicho número."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 * 8 = 8\n",
+      "2 * 8 = 16\n",
+      "3 * 8 = 24\n",
+      "4 * 8 = 32\n",
+      "5 * 8 = 40\n",
+      "6 * 8 = 48\n",
+      "7 * 8 = 56\n",
+      "8 * 8 = 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Introduzca a continuación un número entre el 0 y el 10: \"))\n",
+    "incremento = 0\n",
+    "if num >= 0 and num <= 10:\n",
+    "    for i in range(num):\n",
+    "        incremento += 1\n",
+    "        res = num * incremento\n",
+    "        print(incremento, \"*\", num, \"=\", res)\n",
+    "else:\n",
+    "    print(\"El número que has introducido no es válido\")"
    ]
   },
   {
@@ -83,6 +215,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La altura de la pirámide es 44 "
+     ]
+    }
+   ],
+   "source": [
+    "cantidad = int(input(\"Introduzca la cantidad de bloques que tienen: \"))\n",
+    "construccion = 0\n",
+    "altura = 0\n",
+    "suma = 0\n",
+    "while suma < cantidad:\n",
+    "    construccion += 1\n",
+    "    suma += construccion\n",
+    "    if suma <= cantidad:\n",
+    "        altura += 1\n",
+    "    print(\"La altura de la pirámide es\", altura, end=\" \")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,12 +255,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Introduzca un número para calcular su factorial: \"))\n",
+    "res = 1\n",
+    "for i in range(num, 0, -1):\n",
+    "    res *= i\n",
+    "print(res)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Ejercicio 7\n",
     "\n",
     "Crea un programa en Python que pida 6 notas y que escriba la cantidad de alumnos aprobados, condicionados (nota entre 4 y 5) y suspensos.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hay 2 alumno/s suspenso/s, 1 alumno/s condicionado/s y 2 alumno/s aprobado/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "suspenso = 0\n",
+    "condicionado = 0\n",
+    "aprobado = 0\n",
+    "for i in range(5):\n",
+    "    nota = float(input(\"Introduzca la nota: \"))\n",
+    "    if nota > 0 and nota < 4:\n",
+    "        suspenso += 1\n",
+    "    if nota >= 4 and nota <= 5:\n",
+    "        condicionado += 1\n",
+    "    if nota > 6 and nota < 10:\n",
+    "        aprobado += 1\n",
+    "    #else:\n",
+    "    #     print(\"Ha introducido una cifra inválida, por favor inténtelo de nuevo\")\n",
+    "print(\"Hay\", suspenso, \"alumno/s suspenso/s,\", condicionado, \"alumno/s condicionado/s y\", aprobado, \"alumno/s aprobado/s\")"
    ]
   },
   {
@@ -113,6 +322,21 @@
     "## Ejercicio 8\n",
     "\n",
     "Crea un programa en Python que pida 10 números y muestre al final si se ha introducido algún negativo.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contador = 0\n",
+    "for i in range(9):\n",
+    "    num = float(input(\"Introduzca un número: \"))\n",
+    "    if num < 0:\n",
+    "        contador + 1\n",
+    "if contador >= 1:\n",
+    "    print(\"Sí, has introducido\", contador, \"números negativos\")"
    ]
   },
   {
@@ -169,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
